--- a/day02-intro-to-html/styles.css
+++ b/day02-intro-to-html/styles.css
@@ -3,10 +3,17 @@
 }
 
 .btn {
-  margin-bottom: 2em;
+  /* margin-bottom: 2em; */
   width: 7em;
   height: 3em;
   text-align: center;
+}
+
+.btn-container {
+  height: 50vh;
+  display: flex;
+  place-content: center;
+  place-items: center; 
 }
 
 .text-center {
@@ -17,7 +24,7 @@
   border: 6px solid black;
   display: grid;
   margin: 0 3em 2em;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(2, 1fr);
   /* grid-template-rows: 100px 150px 200px; */
   /* height: 400px; */
   /* 
@@ -31,6 +38,7 @@
   place-content: center space-between; /* align-items: center; justify-content: space-between */
   gap: 30px;
 }
+
 .grid-item {
   color: white;
   font-size: 1.5rem;
@@ -63,4 +71,42 @@
 }
 .item-9 {
   background-color: #aad041;
+  grid-column-start: 1;
+  grid-column-end: span 2;
+}
+
+@media screen and (min-width: 30em) {
+  .container {
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  .item-9 {
+    background-color: #aad041;
+    grid-column-start: 3;
+    grid-column-end: span 1;
+  }
+}
+
+.j-desc {
+  display: flex;
+  place-items: start;
+  gap: 1em;
+}
+
+.j-desc__details {
+  display: flex;
+  flex-direction: column;
+}
+
+.j-desc__job-title {
+  margin: 0;
+}
+
+.j-desc__company {
+  margin: 0;
+}
+
+.j-desc__metadata {
+  list-style: none;
+  padding: 0;
 }
