--- a/day10-react-state-and-events/job-app-tracker-starter/src/index.css
+++ b/day10-react-state-and-events/job-app-tracker-starter/src/index.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+/* @base {
+  h1 {
+    @apply my-4
+  }
+} */
+
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
